<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/board">

    <TextView
        android:id="@+id/token_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/message"
        android:textColor="@color/text"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/token_message">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/lx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_alignParentStart="true"
                android:background="@color/text"
                android:textColor="@color/colorAccent"
                android:text="@string/letter_x"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <Button
                android:id="@+id/lo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_alignParentEnd="true"
                android:background="@color/text"
                android:textColor="@color/colorAccent"
                android:text="@string/letter_o"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>