<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseOptionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/prompt_board"
            android:textColor="@color/text"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/three"
            android:layout_below="@id/board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/three"
            android:textColor="@color/text"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_marginBottom="30dp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/five"
            android:layout_below="@id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/five"
            android:textColor="@color/text"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_marginBottom="30dp"
            android:clickable="true"/>

    </RelativeLayout>
</FrameLayout>