<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".StatsActivity">

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/back"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/back_button"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="  Back"
                android:textColor="@color/colorAccent"
                android:clickable="true"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/details_one"
        android:layout_below="@id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/games_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/games_played"
            android:textColor="@color/textPrimary"
            android:layout_marginBottom="20dp" />

    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/three_board"
        android:layout_below="@id/details_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/board"/>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/games_won_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/games_won"
                android:textColor="@color/textPrimary"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/games_lost_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/games_lost"
                android:textColor="@color/textPrimary"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/games_draw_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/games_draw"
                android:textColor="@color/textPrimary"
                android:layout_marginBottom="10dp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/five_board"
        android:layout_below="@id/three_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/board"/>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/games_won_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/games_won"
                android:textColor="@color/textPrimary"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/games_lost_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/games_lost"
                android:textColor="@color/textPrimary"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/games_drawn_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/games_draw"
                android:textColor="@color/textPrimary"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:text="@string/reset"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:onClick="resetStats"/>

</RelativeLayout>